Forks html & css, fixes semantics issues, contrast issues and adds skip links

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  background-color: #E7F2FF;
   margin: 0;
   padding: 0;
 }
@@ -69,3 +69,8 @@ form button {
 .site-footer {
   padding: 2rem 0;
 }
+
+a:focus {
+  outline: 4px solid black;
+}
+
